Fix log in prompt contrast

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -37,7 +37,9 @@ h2 > a:hover {
 li {
     list-style-type: none;
 }
-
+.btn-blue {
+    color: #ffffff;
+}
 /*
 // Extra small devices (portrait phones, less than 576px)
 // No media query for `xs` since this is the default in Bootstrap
